--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "![cf](https://i.imgur.com/7v5ASc8.png) Lab 25 - Client Side Auth\r ======",
   "main": "index.js",
+  "engines": { "node": "4.4.7" },
   "scripts": {
     "start": "node server.js",
     "heroku-postbuild": "webpack -p --progress",
